--- a/style.css
+++ b/style.css
@@ -1,22 +1,44 @@
-/* Root Variables */
+@font-face {
+  font-family: 'Funnel Display';
+  src: url('fonts/Funnel_Display') format('ttf'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  url('fonts/Funnel_Display/FunnelDisplay-VariableFont_wght.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
+@font-face {
+  font-family: 'Ultra';
+  src: url('fonts/Ultra') format('ttf'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  url('fonts/Ultra/Ultra-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
+@font-face {
+  font-family: 'Tangerine';
+  src: url('fonts/Tangerine') format('ttf'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  url('fonts/Tangerine/Tangerine-Bold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
 :root {
-  --background-color: #101010;
+  --background-color: #2D2D2D;
   --font-color: #fff;
   --link-color: #adadad;
-  --color-variant-1: #7e2839;
-  --color-variant-2: #950740;
-  --color-variant-3: #c3073f;
-  --border-color: #fff3;
-  --button-hover: rgb(38, 38, 38);
 
-  --bright-background-color: #d6cdb6;
-  --bright-font-color: #101010;
-  --bright-color-variant-1: #81bc90;
-  --bright-color-variant-2: #54805f;
-  --bright-color-variant-3: #334a39;
-  --bright-link-color: #689775;
-  --bright-border-color: #fff3;
-  --bright-button-hover: #c5bda9;
+  --accent-color1: #8e8e8e;
+  --accent-color2: #6c6c6c;
+  --accent-color3: #474747;
+
+  --border-color: #fff3;
+  --hover-color: rgb(38, 38, 38, 0.2);
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html{
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  &.menu-active {
+    overflow: hidden;
+  }
 }
 
 /* Body */
@@ -25,40 +47,40 @@ body {
   flex-direction: column;
   height: 100%;
   transition: 0.5s;
-  background-color: var(--background-color);
+  align-items: center;
+  /*background-color: var(--background-color);*/
   color: var(--font-color);
   letter-spacing: 0.1em;
-  font-size: 1.3em;
+  font-size: 24pt;
   text-align: center;
   padding: 0;
   min-height: 100vh;
   margin: 0;
-  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-family: "Funnel Display", sans-serif;
   font-weight: 400;
-  overflow-y: visible;
-}
-
-/* Content */
-.content {
-  padding: 20vh 0 5vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 250%;
+  filter: contrast(120%) brightness(120%);
+  background:
+          radial-gradient(circle at 50% 15%, rgba(168, 167, 167, 0.75), rgb(57, 55, 55)),
+          url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='8.87' numOctaves='5' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  animation: background 1s forwards 1.3s;
   user-select: none;
+  &.menu-active {
+    overflow: hidden;
+  }
 }
 
 h1 {
   transition: 0.5s;
-  font-size: 7rem;
-  margin: 0 0 10vh 0;
+  font-size: 15rem;
   padding: 0;
-  background-image: linear-gradient(to bottom, var(--color-variant-3), var(--background-color));
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
+  margin: 0;
+  color: var(--font-color);
+  & span {
+    display: inline-block;
+    opacity: 0;
+    transform: translateY(100%);
+    animation: showup 0.5s ease-in-out forwards;
+  }
 }
 
 h2 {
@@ -72,120 +94,265 @@ h2 {
   background-color: transparent;
 }
 
+h3 {
+  margin: 0;
+  height: fit-content;
+}
+
 hr {
   width: 50%;
-  margin: 15vh 0 10vh;
+  margin: -1vh 0 0;
   animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
 }
 
 a {
-  color: var(--link-color);
   text-decoration: none;
+  color: var(--font-color);
+  cursor: pointer;
 }
 
-/* Button Styles */
-.btn-style {
-  transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  border: 1px var(--border-color) solid;
-  border-radius: 0.25rem;
-  background-color: #101010;
-  padding: 0.5rem 0.75rem;
-  text-transform: capitalize;
-  animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
+/*opening animation*/
+first, second, third {
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  will-change: transform, height;
+  transform-origin: top;
 }
 
-.btn-style:hover {
-  background-color: var(--button-hover);
-  color: #fff;
+first {
+  background-color: var(--accent-color1);
+  z-index: 5;
+  animation-delay: 0s;
+  animation: opening 1.4s ease-in-out forwards;
 }
 
-/* Navigation Styles */
-.nav {
-  text-align: center;
-  font-weight: 400;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-gap: 1rem;
-  padding: 0;
+second {
+  background-color: var(--accent-color2);
+  z-index: 4;
+  animation-delay: 0.1s;
+  animation: opening 1.6s ease-in-out forwards;
+}
+
+third {
+  background-color: var(--accent-color3);
   z-index: 3;
+  animation-delay: 0.3s;
+  animation: opening 1.8s ease-in-out forwards;
 }
 
-.nav * {
+/*menu*/
+#menu-button {
+  display: flex;
+  position: sticky;
+  background: none;
+  align-items: center;
+  color: #fff;
+  border: 1px var(--border-color) solid;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  top: 20px;
+  right: 20px;
+  padding: 15px;
+  margin: 0 0 auto auto;
   box-sizing: border-box;
-  animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  will-change: background-color;
+  transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2;
+  & img {
+    height: 20px;
+    width: 20px;
+  }
+  &:hover {
+    background-color: var(--hover-color);
+  }
 }
 
-.nav li {
-  display: inline-block;
-  list-style: none;
-  margin: 0.5em 1em;
+menu {
+  display: flex;
+  position: sticky;
+  align-items: center;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100vh;
+  width: 100%;
+  right: 0;
+  top: 0;
+  padding: 0;
+  margin: -50px 0 0 0;
+  background: var(--accent-color1);
+  transform: scaleY(0);
+  transform-origin: top;
+  will-change: transform, height;
+  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 1;
+  & li a {
+    opacity: 0;
+  }
+  &.active {
+    transform: scaleY(1);
+  }
+  &.active li {
+    list-style: none;
+    justify-content: center;
+    width: fit-content;
+    & a {
+      font-size: 24pt;
+      color: var(--font-color);
+      display: block;
+      padding: 10px 20px;
+      opacity: 1;
+      transition: opacity .3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  /*menu opening and closing animations*/
+  &.active {
+    first{
+      transition-delay: 0s;
+      animation: opening 1s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      transform-origin: bottom;
+      z-index: 3;
+    }
+    second {
+      transition-delay: .1s;
+      animation: opening 1.3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      transform-origin: bottom;
+      z-index: 2;
+    }
+    third {
+      transition-delay: .2s;
+      animation: opening 1.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      transform-origin: bottom;
+      z-index: 1;
+    }
+  }
+  &:not(.active) {
+    first{
+      transition-delay: .2s;
+      animation: opening .7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      transform-origin: top;
+      background: var(--accent-color1);
+      z-index: 3;
+    }
+    second {
+      transition-delay: .2s;
+      animation: opening 1.1s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      transform-origin: top;
+      background: var(--accent-color2);
+      z-index: 2;
+    }
+    third {
+      transition-delay: .2s;
+      height: 100%;
+      animation: none;
+      z-index: 1;
+    }
+  }
 }
 
-.nav a {
-  position: relative;
-  padding: 0.5em 0.8em;
-  font-size: 20px;
-  user-select: none;
-  transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+/*main page*/
+landing{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
 }
 
 /* About Me Section */
 #aboutme {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(6);
-  grid-gap: 1rem;
-  text-align: center;
-  animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
-  margin: 0 auto;
-  width: calc(100% / 3);
-}
-
-h3:not(:first-child) {
-  margin-top: 100px;
-}
-
-h3 {
   display: flex;
-  align-items: flex-end;
-  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: calc(100% / 3);
+  /*grid-template-columns: 1fr;
+  grid-template-rows: repeat(6);
+  grid-gap: 1rem;*/
+  text-align: center;
+  margin: 10vh 0 0;
+  padding: 0;
+  animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
 }
 
-#aboutme > #aboutmetext,
-#aboutme > .skills {
-  margin: 0 2.5vw;
-}
-
-#aboutme > p {
-  text-align: justify;
+#aboutme p,
+#experience p,
+#projects p{
+  text-align: center;
   font-size: 1rem;
   animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
 }
 
-.skills {
-  gap: 0.5rem;
+/*Experience section*/
+#experience {
+  display: flex;
+  flex-direction: column;
+  margin: 10vh 0 0;
+  padding: 0;
+  height: 100vh;
+  width: 50%;
+}
+
+/*.skills {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+  margin: 3rem auto;
+  text-align: center;
+  justify-content: center;
+}*/
+
+.card {
+  margin: 5px 20px;
   align-items: center;
   flex-wrap: wrap;
-  display: flex;
-  margin: auto;
+  padding: 8px;
+  border-radius: 8px;
+  background: transparent;
+  border: 1px solid var(--border-color);
+  will-change: background-color;
+  transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-#aboutme a {
-  transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  font-size: 1rem;
-  list-style-type: none;
-  animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
+.card:hover {
+  background: var(--hover-color);
+  cursor: pointer;
 }
 
 /* Projects Section */
-.card {
+#projects {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 10vh 0 0;
+  padding: 0;
+  width: 50%;
+}
+
+.projects {
+  margin: 3rem auto;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-card {
+  width: 100%;
   border-radius: 0.25rem;
   border: 1px var(--border-color) solid;
   padding: 0.5rem 0.75rem;
-  height: 250px;
-  overflow: hidden;
+  box-sizing: border-box;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -193,23 +360,21 @@ h3 {
   color: var(--link-color);
   margin-bottom: 1rem;
   animation: showup 2s cubic-bezier(0.2, 0.8, 0.25, 1);
-}
-
-.card:hover {
-  background-color: var(--button-hover);
-  color: #fff;
+  &:hover {
+    background-color: var(--hover-color);
+    color: #fff;
+  }
 }
 
 .card-image {
   width: 100%;
   height: 120px;
   overflow: hidden;
-}
-
-.card-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
 }
 
 .card-body {
@@ -224,18 +389,16 @@ h3 {
   color: #888;
 }
 
-.card-content {
+.card-description {
   text-align: left;
-}
-
-.card-content h4 {
-  font-size: 18px;
-  margin: 0;
-}
-
-.card-content p {
-  font-size: 16px;
-  margin: 0 0 15px 0;
+  & h4 {
+    font-size: 18px;
+    margin: 0;
+  }
+  & p {
+    font-size: 16px;
+    margin: 0 0 15px 0;
+  }
 }
 
 .card-tags {
@@ -252,30 +415,60 @@ h3 {
   margin-right: 0.25rem;
 }
 
-/* Theme Change Button */
-.theme-change {
-  color: #fff;
-  border: 1px var(--border-color) solid;
-  border-radius: 24px;
-  background: none;
-  width: 32px;
-  height: 32px;
-  text-align: center;
-  display: block;
-  position: fixed;
-  margin: 20px 0 0 20px;
-  transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+/*footer section*/
+footer {
+  height: 7.5vh;
+  color: var(--link-color);
+  text-align: left;
+  display: flex;
+  width: 100%;
+  gap: 5rem;
+  z-index: 0;
+  padding: 0;
+  transition: .2s;
+  font-size: 16pt;
+  background-color: var(--hover-color);
+  & a {
+    color: var(--link-color);
+    position: relative;
+    /*padding: 0.5em 0.8em;*/
+    user-select: none;
+    transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  #contact {
+    width: calc(100vw/3);
+    text-align: center;
+    horiz-align: center;
+    margin: auto;
+  }
+  #links {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    /*height: 5vh;*/
+    & a {
+      padding: 10px;
+      width: 24px;
+      height: 24px;
+      background: var(--background-color);
+      align-content: center;
+      border-radius: 50%;
+      & img {
+        filter: brightness(75%);
+        width: 24px;
+        height: 24px;
+        transition: .2s;
+      }
+      & img:hover {
+        filter: brightness(100%);
+      }
+    }
+  }
 }
 
-.bright .theme-change {
-  border-color: var(--bright-color-variant-3);
-}
-
-.theme-change:hover {
-  background-color: var(--button-hover);
-}
-
-/* Media Queries */
+/* Media */
 @media (min-width: 900px) {
   .nav {
     grid-template-columns: repeat(3, 1fr);
@@ -283,117 +476,61 @@ h3 {
 }
 
 @media (max-width: 900px) {
-  body {
-    margin-top: 5vh;
-    overflow: visible;
+  first, second, third {
+    height: 100vh;
   }
-
-  .text {
-    height: 175vh;
+  menu {
+    height: 100vh;
   }
-
-  #aboutme {
-    width: 75vw;
-    display: block;
-  }
-
   h1 {
-    margin-bottom: 10vh;
-    font-size: 90px;
+    font-size: 70px;
     height: 80px;
     line-height: 80px;
   }
-
   h2 {
     font-size: 30px;
   }
-
-  .nav {
-    margin: 0;
-    grid-gap: 3rem;
+  #aboutme,
+  #experience,
+  #projects,
+  .projects{
+    width: 80vw;
+    margin-top: 1vh;
+    height: fit-content;
+    min-height: 100vh;
   }
-
-  .text {
-    margin-top: -3vh;
-  }
-
-  hr {
-    margin: 10vh 0 5vh;
-  }
-
-  #aboutme > :nth-child(1),
-  #aboutme > :nth-child(3) {
-    margin-top: 5vh;
-  }
-
-  button {
-    padding: 0;
-  }
-
-  button > i {
-    line-height: 1;
+  footer {
+    display: flex;
+    position: relative;
+    font-size: 8pt;
+    & #links a img,
+    #links a {
+      height: 14px;
+      width: 14px;
+    }
   }
 }
 
 /* Animations */
+@keyframes opening {
+  0% {
+    transform: scaleY(1);
+  }
+  /*50% {
+    transform: scaleY(1);
+  }*/
+  100% {
+    transform: scaleY(0);
+  }
+}
+
 @keyframes showup {
   0% {
     opacity: 0;
-    transform: translate(0, 5%);
+    transform: translate(0, 15%);
   }
   100% {
     opacity: 1;
     transform: translate(0, 0);
   }
-}
-
-@keyframes textclip {
-  from {
-    background-position: 0% center;
-  }
-  to {
-    background-position: 200% center;
-  }
-}
-
-/* Bright Style */
-.bright {
-  color: var(--bright-font-color);
-}
-
-.bright .btn-style {
-  color: var(--bright-font-color);
-  border-color: var(--bright-color-variant-3);
-  background-color: var(--bright-background-color);
-}
-
-.bright .card {
-  color: var(--bright-font-color);
-  border-color: var(--bright-color-variant-3);
-}
-
-.bright .tag {
-  color: var(--bright-font-color);
-  background-color: #5555;
-}
-.bright .btn-style:hover,
-.bright .card:hover,
-.bright .theme-change:hover {
-  background-color: #c5bda9;
-}
-
-.bright a {
-  color: var(--bright-font-color);
-}
-
-.bright-bg {
-  background-color: var(--bright-background-color);
-}
-
-.bright h1 {
-  background-image: linear-gradient(to bottom, var(--bright-color-variant-2), var(--bright-background-color));
-}
-
-.bright hr {
-  border: 1px var(--bright-font-color) solid;
 }
